2000-11-16  Simeon H.K. Fitch  <simeon@fitch.net>

	* org/apache/tools/ant/gui/customizer/StringPropertyEditor.java:
	Changed underlying widget type to JTextPane so that it would
	accomidate multi-line strings property.

	* org/apache/tools/ant/gui/acs/ACSTreeNodeElement.java: Fixed
	nasty java.lang.IllegalAccessException bug that I thought was
	related to Java 1.3 Blackdown RC1, but wasn't. It was related to
	using Jikes, which interprests method resolution differently than
	javac, resulting in a call trying to access a private method
	implementation of a public interface.

	* org/apache/tools/ant/gui/ResourceManager.java: Added convenience
	method for getting resource images for a given class.

	* org/apache/tools/ant/gui/AntAction.java: Added toggle property.

	* org/apache/tools/ant/gui/ActionManager.java: Added ability to
	handle toggle actions to menu bar (still need to add support to
	tool bar).

	* org/apache/tools/ant/gui/EventResponder.java: Added emacs
	notifier command.

	* org/apache/tools/ant/gui/ide/EmacsNotifier.java: Imported.

	* org/apache/tools/ant/gui/ProjectProxy.java: Added code to add
	listeners registered with the AppContext to the build.

	* org/apache/tools/ant/gui/AppContext.java: Now allows registering
	of build listeners to be added to project at build time.

	* org/apache/tools/ant/gui/Main.java: Added loading of build file
	provided on command line.

2000-11-14  Simeon H.K. Fitch  <simeon@fitch.net>

	* org/apache/tools/ant/gui/Antidote.java: Added top area widget,
	which is *not* managed inside a split pane.

	* org/apache/tools/ant/gui/ProjectNavigator.java: Added minimum
	size to keep resizing of parent from hiding widget.

	* org/apache/tools/ant/gui/ActionManager.java: Large functionality
	addtion for allowing action enabled/disabled state to be defined
	in the configuration file. The triggering of state changes is
	based on the firing of specific events.

	* org/apache/tools/ant/gui/AntAction.java: Broke out from inner